--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
   "bin": "app.js",
   "dependencies": {
     "chalk": "^4.1.0",
+    "date-fns": "^2.16.1",
     "faker": "^5.1.0",
     "figlet": "^1.5.0",
     "fs-extra": "^9.0.1",
-    "puppeteer": "^5.2.1",
     "puppeteer-cloak": "^1.0.6",
     "puppeteer-extra": "^3.1.15",
     "puppeteer-extra-plugin-adblocker": "^2.11.6",
-    "puppeteer-extra-plugin-stealth": "^2.6.1",
+    "puppeteer-extra-plugin-stealth": "^2.6.2",
     "remove-blank-lines": "^1.4.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "puppeteer": "^5.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
